@@ -1,3 +1,9 @@
+2002-05-20  Bruno Haible  <bruno@clisp.org>
+
+	Remove gcc-3.0.4 warning.
+	* eval.d (LD, LR): Don't use CONCAT to paste strings; justaposing the
+	strings is sufficient.
+
 2002-05-19  Sam Steingold  <sds@gnu.org>
 
 	* lispbibl.d (STACK_register) [S390]: adjusted 2002-03-24 patch
